--- a/index.html
+++ b/index.html
@@ -273,126 +273,135 @@
                 <p class="testimonials-text">Our in - house search engine experts deliver profitable Google,<br> Bing, Yahoo Ranking.</p>
                 <ul class="testimonials-list">
                     <li class="testimonials-list-item">
-                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
+                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui<br> blanditiis praesentium voluptatum deleniti atque corrupti<br> quos dolores et quas molestias excepturi sint<br> cupiditate non provident.</p>
                         <img class="testimonials-item-img" src="img/photo1.png" alt="photo">
                         <p class="testimonials-item-name">Rabith Halson</p>
                         <p class="testimonials-item-prof">Web Design</p>
                     </li>
                     <li class="testimonials-list-item">
-                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
+                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui<br> blanditiis praesentium voluptatum deleniti atque corrupti<br> quos dolores et quas molestias excepturi sint<br> cupiditate non provident.</p>
                         <img class="testimonials-item-img" src="img/photo2.png" alt="photo">
                         <p class="testimonials-item-name">Selena Roy</p>
                         <p class="testimonials-item-prof">UI Designer</p>
                     </li>
                     <li class="testimonials-list-item">
-                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
+                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui<br> blanditiis praesentium voluptatum deleniti atque corrupti<br> quos dolores et quas molestias excepturi sint<br> cupiditate non provident.</p>
                         <img class="testimonials-item-img" src="img/photo1.png" alt="photo">
                         <p class="testimonials-item-name">Rabith Halson</p>
                         <p class="testimonials-item-prof">Web Design</p>
                     </li>
                     <li class="testimonials-list-item">
-                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint cupiditate non provident.</p>
+                        <p class="testimonials-item-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui<br> blanditiis praesentium voluptatum deleniti atque corrupti<br> quos dolores et quas molestias excepturi sint<br> cupiditate non provident.</p>
                         <img class="testimonials-item-img" src="img/photo2.png" alt="photo">
                         <p class="testimonials-item-name">Selena Roy</p>
                         <p class="testimonials-item-prof">UI Designer</p>
                     </li>
                 </ul>
+                <div class="slider-btns">
+                    <button class="slider-btn-right"></button>
+                    <button class="slider-btn-left"></button>
+                </div>
             </div>
         </div>
-        <div class="blogpost">
-            <h3 class="blogpost-head">Our Latest News</h4>
-            <p class="blogpost-text">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                Curae Suspendisse ante arcu, consectetur id nisl eget.</p>
-            <ul class="blogpost-list">
-                <li class="blogpost-list-item">
-                    <img src="img/blogpost1.png" alt="img">
-                    <div class="blogpost-item-content">
-                        <h4 class="blogpost-item-head">How to become a new digital marketing idea?</h4>
-                        <ul class="icons-list">
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/admin-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">By Admin</p>
-                            </li>
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/like-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">32 Love</p>
-                            </li>
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/message-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">13 Comment</p>
-                            </li>
-                        </ul>
-                        <p class="blogpost-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
-                        <span class="blogpost-text-orange">Read More...</span>
-                    </div>
-                </li>
-                <li class="blogpost-list-item">
-                    <img src="img/blogpost2.png" alt="img">
-                    <div class="blogpost-item-content">
-                        <h4 class="blogpost-item-head">How to become a new digital marketing idea?</h4>
-                        <ul class="icons-list">
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/admin-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">By Admin</p>
-                            </li>
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/like-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">32 Love</p>
-                            </li>
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/message-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">13 Comment</p>
-                            </li>
-                        </ul>
-                        <p class="blogpost-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
-                        <span class="blogpost-text-orange">Read More...</span>
-                    </div>
-                </li>
-                <li class="blogpost-list-item">
-                    <img src="img/blogpost1.png" alt="img">
-                    <div class="blogpost-item-content">
-                        <h4 class="blogpost-item-head">How to become a new digital marketing idea?</h4>
-                        <ul class="icons-list">
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/admin-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">By Admin</p>
-                            </li>
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/like-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">32 Love</p>
-                            </li>
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/message-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">13 Comment</p>
-                            </li>
-                        </ul>
-                        <p class="blogpost-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
-                        <span class="blogpost-text-orange">Read More...</span>
-                    </div>
-                </li>
-                <li class="blogpost-list-item">
-                    <img src="img/blogpost2.png" alt="img">
-                    <div class="blogpost-item-content">
-                        <h4 class="blogpost-item-head">How to become a new digital marketing idea?</h4>
-                        <ul class="icons-list">
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/admin-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">By Admin</p>
-                            </li>
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/like-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">32 Love</p>
-                            </li>
-                            <li class="icons-list-item">
-                                <img class="icons-list-item-img" src="img/message-icon.svg" alt="icon">
-                                <p class="icons-list-item-text">13 Comment</p>
-                            </li>
-                        </ul>
-                        <p class="blogpost-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
-                        <span class="blogpost-text-orange">Read More...</span>
-                    </div>
-                </li>
-            </ul>
+        <div class="wrapper wrapper-blogpost">
+            <div class="blogpost">
+                <h3 class="blogpost-head">Our Latest News</h4>
+                <p class="blogpost-text-head">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia<br>Curae Suspendisse ante arcu, consectetur id nisl eget.</p>
+                <ul class="blogpost-list">
+                    <li class="blogpost-list-item-first">
+                        <img src="img/blogpost1.png" alt="img">
+                        <div class="blogpost-item-content">
+                            <h4 class="blogpost-item-head">How to become a new digital marketing idea?</h4>
+                            <ul class="icons-list">
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/admin-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">By Admin</p>
+                                </li>
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/like-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">32 Love</p>
+                                </li>
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/message-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">13 Comment</p>
+                                </li>
+                            </ul>
+                            <p class="blogpost-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
+                            <span class="blogpost-text-orange">Read More...</span>
+                        </div>
+                    </li>
+                    <li class="blogpost-list-item">
+                        <img src="img/blogpost2.png" alt="img">
+                        <div class="blogpost-item-content">
+                            <h4 class="blogpost-item-head">How to become a new digital marketing idea?</h4>
+                            <ul class="icons-list">
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/admin-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">By Admin</p>
+                                </li>
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/like-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">32 Love</p>
+                                </li>
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/message-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">13 Comment</p>
+                                </li>
+                            </ul>
+                            <p class="blogpost-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
+                            <span class="blogpost-text-orange">Read More...</span>
+                        </div>
+                    </li>
+                    <li class="blogpost-list-item">
+                        <img src="img/blogpost1.png" alt="img">
+                        <div class="blogpost-item-content">
+                            <h4 class="blogpost-item-head">How to become a new digital marketing idea?</h4>
+                            <ul class="icons-list">
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/admin-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">By Admin</p>
+                                </li>
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/like-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">32 Love</p>
+                                </li>
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/message-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">13 Comment</p>
+                                </li>
+                            </ul>
+                            <p class="blogpost-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
+                            <span class="blogpost-text-orange">Read More...</span>
+                        </div>
+                    </li>
+                    <li class="blogpost-list-item">
+                        <img src="img/blogpost2.png" alt="img">
+                        <div class="blogpost-item-content">
+                            <h4 class="blogpost-item-head">How to become a new digital marketing idea?</h4>
+                            <ul class="icons-list">
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/admin-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">By Admin</p>
+                                </li>
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/like-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">32 Love</p>
+                                </li>
+                                <li class="icons-list-item">
+                                    <img class="icons-list-item-img" src="img/message-icon.svg" alt="icon">
+                                    <p class="icons-list-item-text">13 Comment</p>
+                                </li>
+                            </ul>
+                            <p class="blogpost-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
+                            <span class="blogpost-text-orange">Read More...</span>
+                        </div>
+                    </li>
+                </ul>
+                <div class="slider-btns">
+                    <button class="slider-btn-right"></button>
+                    <button class="slider-btn-left"></button>
+                </div>
+            </div>
         </div>
         <div class="footer">
             <div class="footer-logo">
