--- a/index.html
+++ b/index.html
@@ -403,48 +403,53 @@
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="footer-logo">
-                <img  class="footer-logo-img" src="img/Logo.svg" alt="logo">
-                <p class="footer-logo-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate business through revolutionary.</p>
-                <ul class="footer-links-list">
-                    <li class="footer-links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
-                    <li class="footer-links-list-item"><img src="img/Vector.svg" alt="tw"></li>
-                    <li class="footer-links-list-item"><img src="img/linkedin.svg" alt="link"></li>
-                    <li class="footer-links-list-item"><img src="img/google.svg" alt="google"></li>
-                </ul>
-            </div>
-            <div class="footer-company">
-                <h3 class="footer-head">Our Company</h3>
-                <ul class="footer-company-list">
-                    <li class="footer-company-list-item">About Us</li>
-                    <li class="footer-company-list-item">Our Services</li>
-                    <li class="footer-company-list-item">Our Plan</li>
-                    <li class="footer-company-list-item">Our Team</li>
-                    <li class="footer-company-list-item">Latest News</li>
-                </ul>
-            </div>
-            <div class="footer-services">
-                <h3 class="footer-head">Our Services</h3>
-                <ul class="footer-services-list">
-                    <li class="footer-services-list-item">Digital Marketing</li>
-                    <li class="footer-services-list-item">SEO Optimization</li>
-                    <li class="footer-services-list-item">Web Development</li>
-                    <li class="footer-services-list-item">Link Building</li>
-                    <li class="footer-services-list-item">Terms & Privacy</li>
-                </ul>
-            </div>
-            <div class="footer-contacts">
-                <h3 class="footer-head">Contact Us</h3>
-                <ul class="footer-services-list">
-                    <li class="footer-contacts-list-item">Location: 1370 Orvilly Rot APT, New York, USA</li>
-                    <li class="footer-contacts-list-item">Email: growbeinfo@gmail</li>
-                    <li class="footer-contacts-list-item">Phone: +324-9332-5018</li>
-                </ul>
+        <div class="wrapper wrapper-footer">
+            <div class="footer">
+                <div class="footer-logo">
+                    <img  class="footer-logo-img" src="img/Logo.svg" alt="logo">
+                    <p class="footer-logo-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate business through revolutionary.</p>
+                    <ul class="footer-links-list">
+                        <li class="footer-links-list-item"><img src="img/facebook (1).svg" alt="fb"></li>
+                        <li class="footer-links-list-item"><img src="img/Vector.svg" alt="tw"></li>
+                        <li class="footer-links-list-item"><img src="img/linkedin.svg" alt="link"></li>
+                        <li class="footer-links-list-item"><img src="img/google.svg" alt="google"></li>
+                    </ul>
+                </div>
+                <div class="footer-company">
+                    <h3 class="footer-head">Our Company</h3>
+                    <ul class="footer-company-list">
+                        <li class="footer-company-list-item">About Us</li>
+                        <li class="footer-company-list-item">Our Services</li>
+                        <li class="footer-company-list-item">Our Plan</li>
+                        <li class="footer-company-list-item">Our Team</li>
+                        <li class="footer-company-list-item">Latest News</li>
+                    </ul>
+                </div>
+                <div class="footer-services">
+                    <h3 class="footer-head">Our Services</h3>
+                    <ul class="footer-services-list">
+                        <li class="footer-services-list-item">Digital Marketing</li>
+                        <li class="footer-services-list-item">SEO Optimization</li>
+                        <li class="footer-services-list-item">Web Development</li>
+                        <li class="footer-services-list-item">Link Building</li>
+                        <li class="footer-services-list-item">Terms & Privacy</li>
+                    </ul>
+                </div>
+                <div class="footer-contacts">
+                    <h3 class="footer-head">Contact Us</h3>
+                    <ul class="footer-services-list">
+                        <li class="footer-contacts-list-item"><span>Location:</span> 1370 Orvilly Rot APT,<br> New York, USA</li>
+                        <li class="footer-contacts-list-item"><span>Email:</span> growbeinfo@gmail</li>
+                        <li class="footer-contacts-list-item"><span>Phone:</span> +324-9332-5018</li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="copyright">
-            <p class="copyright-text">Copyright © GrowBe 2021. All Rights Reserved.</p>
+        <div class="wrapper wrapper-copyright">
+            <div class="copyright">
+                <hr>
+                <p class="copyright-text">Copyright © GrowBe 2021. All Rights Reserved.</p>
+            </div>
         </div>
     </div>
 </body>
