--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#">Watch video</a>
                     </div>
                 </div>
-                <img class="header-img" src="/img/header-content.png" alt="header-content">
+                <img class="header-img" src="img/header-content.png" alt="header-content">
             </div>
             <ul class="header-partners-list">
                 <li class="header-partners-list-item"><img src="img/Liva.svg" alt="Liva"></li>
